# sunbot

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: fly_deploy.yml
sunbot/apis/: __init__.py  geo_handler.py
sunbot/apis/weather/: meteofrance.py
sunbot/core/: imager.py
sunbot/utils/: charts.py
sunbot/weather/: Meteo.py
