[tool.poetry]
name = "sunbot"
version = "0.1.0"
description = "discord bot providing current and forecast weather"
authors = [ 
    "Clément Pagés <clement.pages@etik.com>",
]
packages = [
    { include = "sunbot" }
]

[tool.poetry.dependencies]
python = "~3.12"
discord = "^2.0.0"
PyNaCl = "^1.5.0"
nest-asyncio = "^1.5.5"
numpy = ">=2.0.0"
Pillow = "^10.3.0"
pytz = "^2023.3"
pylcs = "^0.1.1"
levenshtein = "^0.23.0"
setuptools = "^80.9.0"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
